# trustzone-m-tester

./: .gitignore  Cargo.toml  memory.x
.cargo/: config.toml
non-secure/: Cargo.toml  build.rs
non-secure/src/: lib.rs  main.rs  other_private_thing.rs
non-secure/src/other_public_thing/: mod.rs
secure/: Cargo.toml  Embed.toml  build.rs
secure/src/: main.rs
